@@ -1,6 +1,7 @@
 2009-01-12  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Merge with 1_x_x branch
+	* Added base model and implemented "save" method
 
 2009-01-07  Dmitry Dulepov  <dmitry@typo3.org>
 
